# magen3

./: .env.example  .gitignore  .npmrc  README.md  index.html  package.json  payload.json  pnpm-lock.yaml  railway.json  rust-toolchain.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
backend/: server.mjs
backend/casper/: auditPayload.mjs
backend/data/: seed.mjs
backend/db/: client.mjs  migrate.mjs  schema.mjs
backend/lib/: agentGateway.mjs  ids.mjs  policyEngine.mjs
backend/store/: index.mjs  memoryStore.mjs  postgresStore.mjs
contracts/magen3-audit-registry/: Cargo.toml  README.md  rust-toolchain.toml
contracts/magen3-audit-registry/contract/src/: lib.rs
docs/: AGENT_GATEWAY_API.md  AGENT_RUNNER_DEMO.md  APPROVED_EXECUTION_FLOW.md  BUILDATHON_SUBMISSION.md  CASPER_BUILD_LOCKS.md  CASPER_CONTRACT_API_FIX.md  CASPER_DEPLOYMENT_PLAYBOOK.md  CASPER_INTEGRATION.md  CASPER_PROOF_SECTION.md  CASPER_RECORDER.md  CASPER_RUST_TROUBLESHOOTING.md  CASPER_WALLET_CONNECT.md  CONNECTED_WALLET_EXECUTION.md  DEMO_WALKTHROUGH.md  EXTERNAL_AGENT_DEMO.md  FINAL_DEMO_CHECKLIST.md  GATEWAY_INTEGRATION.md  PRODUCTION_GATEWAY_CLEANUP.md  RAILWAY_V21_HEALTH_FIX.md  RAILWAY_V6_CHECKLIST.md  REAL_AGENT_CLIENT.md  REAL_DATA_WALLET_SCOPING.md  figma-prompt.md
examples/real-agent-client/: README.md  index.mjs  last-casper-payload.json
scripts/casper/: check-contract-wasm.mjs  contract-doctor.mjs  prepare-decision-payload.mjs  print-install-command.mjs  print-record-command.mjs
src/: main.tsx
src/app/: App.tsx
src/styles/: fonts.css  theme.css
(+3 files in other folders)
